[project]
name = "support-escalator"
version = "0.1.0"
description = "LangGraph support ticket resolver with human escalation interrupts"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
